--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.6.8",
     "newsapi": "^2.4.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
